<resources>
    <!--<string name="app_name">JiaShi_JianCe</string>-->
    <string name="XXX">xxx</string>

    <!--登录界面-->
    <string name="app_name">驾驶检测</string>
    <string name="ZhangHao">账号：</string>
    <string name="Qing_ShuRu_ZhangHao">请输入账号</string>
    <string name="MiMa">密码：</string>
    <string name="Qing_ShuRu_MiMa">请输入密码</string>
    <string name="WangJi_MiMa">忘记密码</string>
    <string name="JiZhu_MiMa">&#160;&#160;记住密码</string>
    <string name="DengLu">登&#160;&#160;&#160;&#160;&#160;&#160;录</string>

    <!--找回密码界面-->
    <string name="ShuRu_XinMiMa">输入新密码：</string>
    <string name="Qing_ShuRu_XinMiMa">请输入新密码</string>
    <string name="QueRen_XinMiMa">确认新密码：</string>
    <string name="Qing_QueRen_XinMiMa">请确认新密码</string>
    <string name="QueDing">确&#160;&#160;&#160;&#160;&#160;&#160;定</string>
    <string name="ZhaoHui_MiMa">找&#160;&#160;&#160;&#160;回&#160;&#160;&#160;&#160;密&#160;&#160;&#160;&#160;码</string>
    <string name="ZhaoHui_MiMa_ZhangHao">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;账号：</string>

    <!--主界面-->
    <string name="ShiShi_ShuJu">实时数据</string>
    <string name="WeiGui_JiLu">违规记录</string>
    <string name="GeRen_ZhongXin">个人中心</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--个人中心-->
    <string name="XiuGai_ZiLiao">修改资料</string>
    <string name="XiuGai_MiMa">修改密码</string>
    <string name="LianXi_KeFu">联系客服</string>
    <string name="GuanYu_WoMen">关于我们</string>
    <string name="TuiChu_DengLu">退出登录</string>

    <!--修改资料界面-->
    <string name="CheZhuMing">车主名：</string>
    <string name="Qing_ShuRu_CheZhuMing">请输入车主名</string>

    <!--实时数据界面-->
    <string name="CheZhu">车主：</string>
    <string name="RiQi">日期：</string>
    <string name="TiWen">体温：</string>
    <string name="XinLv">心率：</string>
    <string name="XueYang">血氧：</string>
    <string name="WeiZhi">位置：</string>
    <string name="TiShi">提示：</string>
    <string name="ShuaXin">刷&#160;&#160;&#160;&#160;新</string>

    <!--违规记录界面-->
    <string name="XingWei">违规行为：</string>

</resources>