<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal">
    <!--找回密码界面-->

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/HangGao"
        android:gravity="center"
        android:text="@string/ZhaoHui_MiMa"
        android:textColor="@color/black"
        android:textSize="@dimen/ZiTi_DaXiao" />

    <LinearLayout
        android:layout_width="360dp"
        android:layout_height="@dimen/HangGao"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/ZhaoHui_MiMa_ZhangHao"
            android:textColor="@color/black"
            android:textSize="@dimen/ZiTi_DaXiao" />

        <EditText
            android:id="@+id/et_ZhangHao"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_weight="1"
            android:background="@drawable/selector_bian_ji_kuan_xiao_guo"
            android:hint="@string/Qing_ShuRu_ZhangHao"
            android:inputType="text"
            android:maxLength="11"
            android:textColor="@color/black"
            android:textColorHint="@color/HuiSe"
            android:textSize="@dimen/ZiTi_DaXiao" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="360dp"
        android:layout_height="@dimen/HangGao"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/ShuRu_XinMiMa"
            android:textColor="@color/black"
            android:textSize="@dimen/ZiTi_DaXiao" />

        <EditText
            android:id="@+id/et_XinMiMa1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_weight="1"
            android:background="@drawable/selector_bian_ji_kuan_xiao_guo"
            android:hint="@string/Qing_ShuRu_XinMiMa"
            android:inputType="textPassword"
            android:textColor="@color/black"
            android:textColorHint="@color/HuiSe"
            android:textSize="@dimen/ZiTi_DaXiao" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="360dp"
        android:layout_height="@dimen/HangGao"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/QueRen_XinMiMa"
            android:textColor="@color/black"
            android:textSize="@dimen/ZiTi_DaXiao" />

        <EditText
            android:id="@+id/et_XinMiMa2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_weight="1"
            android:background="@drawable/selector_bian_ji_kuan_xiao_guo"
            android:hint="@string/Qing_QueRen_XinMiMa"
            android:inputType="textPassword"
            android:textColor="@color/black"
            android:textColorHint="@color/HuiSe"
            android:textSize="@dimen/ZiTi_DaXiao" />

    </LinearLayout>

    <Button
        android:id="@+id/btn_QueDing"
        android:layout_width="250dp"
        android:layout_height="@dimen/HangGao"
        android:text="@string/QueDing"
        android:textColor="@color/black"
        android:textSize="@dimen/ZiTi_DaXiao" />
</LinearLayout>