<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">
    <!--修改资料界面-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/white"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/iv_FanHui"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:padding="5dp"
            android:src="@drawable/fan_hui" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/XiuGai_ZiLiao"
            android:textColor="@color/black"
            android:textSize="25dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="360dp"
        android:layout_height="60dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/CheZhuMing"
            android:textColor="@color/black"
            android:textSize="@dimen/ZiTi_DaXiao" />

        <EditText
            android:id="@+id/et_CheZhuMing"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_weight="1"
            android:background="@drawable/selector_bian_ji_kuan_xiao_guo"
            android:hint="@string/Qing_ShuRu_CheZhuMing"
            android:inputType="text"
            android:textColor="@color/black"
            android:textColorHint="@color/HuiSe"
            android:textSize="@dimen/ZiTi_DaXiao" />

    </LinearLayout>

    <Button
        android:id="@+id/btn_QueDing"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/GuSe"
        android:text="@string/QueDing"
        android:textColor="@color/white"
        android:textSize="@dimen/ZiTi_DaXiao" />

</LinearLayout>