<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragment_GeRen_ZhongXin">
    <!--个人中心碎片-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/GuSe"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/GuSe"
            android:gravity="center"
            android:text="@string/GeRen_ZhongXin"
            android:textColor="@color/white"
            android:textSize="30sp" />

        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iv_TouXiang"
                android:layout_width="97dp"
                android:layout_height="97dp"
                android:layout_gravity="center"
                android:scaleType="centerCrop"
                android:src="@drawable/tou_xiang" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_CheZhuMing"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/GuSe"
                    android:text="车主名"
                    android:textColor="@color/white"
                    android:textSize="30sp"
                    android:paddingLeft="10dp"/>

                <Button
                    android:id="@+id/btn_TuiChu_DengLu"
                    android:layout_width="match_parent"
                    android:layout_height="30sp"
                    android:background="@color/GuSe"
                    android:text="@string/TuiChu_DengLu"
                    android:textColor="@color/black"
                    android:textSize="@dimen/ZiTi_DaXiao" />

            </LinearLayout>

        </LinearLayout>

        <Button
            android:id="@+id/btn_XiuGai_ZiLiao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#ffffff"
            android:drawableLeft="@drawable/xiu_gai_zi_liao"
            android:drawableRight="@drawable/you_jian_tou"
            android:text="@string/XiuGai_ZiLiao"
            android:textSize="@dimen/ZiTi_DaXiao" />

        <Button
            android:id="@+id/btn_XiuGai_MiMa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#ffffff"
            android:drawableLeft="@drawable/xiu_gai_mi_ma"
            android:drawableRight="@drawable/you_jian_tou"
            android:text="@string/XiuGai_MiMa"
            android:textSize="@dimen/ZiTi_DaXiao" />

        <Button
            android:id="@+id/btn_LianXi_KeFu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#ffffff"
            android:drawableLeft="@drawable/lian_xi_ke_fu"
            android:drawableRight="@drawable/you_jian_tou"
            android:text="@string/LianXi_KeFu"
            android:textSize="@dimen/ZiTi_DaXiao"
            android:onClick="onClick"/>

        <Button
            android:id="@+id/btn_GuanYu_WoMen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#ffffff"
            android:drawableLeft="@drawable/guan_yu_wo_men"
            android:drawableRight="@drawable/you_jian_tou"
            android:text="@string/GuanYu_WoMen"
            android:textSize="@dimen/ZiTi_DaXiao"
            android:onClick="onClick"/>


    </LinearLayout>

</FrameLayout>