<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment_ShiShi_ShuJu">

    <!--个人中心碎片-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/GuSe"
            android:gravity="center"
            android:text="@string/ShiShi_ShuJu"
            android:textColor="@color/white"
            android:textSize="30sp" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:scaleType="centerCrop"
            android:src="@drawable/shi_shi_shu_ju" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="#000000" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/HangGao"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:paddingStart="20dp"
                android:text="@string/CheZhu"
                android:textColor="@color/black"
                android:textSize="@dimen/ZiTi_DaXiao"
                tools:ignore="RtlSymmetry" />

            <TextView
                android:id="@+id/tv_CheZhu"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/XXX"
                android:textColor="@color/black"
                android:textSize="@dimen/ZiTi_DaXiao" />

        </LinearLayout>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="#000000" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/HangGao"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:paddingStart="20dp"
                android:text="@string/RiQi"
                android:textColor="@color/black"
                android:textSize="@dimen/ZiTi_DaXiao"
                tools:ignore="RtlSymmetry" />

            <TextView
                android:id="@+id/tv_RiQi"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/XXX"
                android:textColor="@color/black"
                android:textSize="@dimen/ZiTi_DaXiao" />

        </LinearLayout>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="#000000" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/HangGao"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:paddingStart="20dp"
                android:text="@string/TiWen"
                android:textColor="@color/black"
                android:textSize="@dimen/ZiTi_DaXiao"
                tools:ignore="RtlSymmetry" />

            <TextView
                android:id="@+id/tv_TiWen"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/XXX"
                android:textColor="@color/black"
                android:textSize="@dimen/ZiTi_DaXiao" />

        </LinearLayout>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="#000000" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/HangGao"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:paddingStart="20dp"
                android:text="@string/XinLv"
                android:textColor="@color/black"
                android:textSize="@dimen/ZiTi_DaXiao"
                tools:ignore="RtlSymmetry" />

            <TextView
                android:id="@+id/tv_XinLv"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/XXX"
                android:textColor="@color/black"
                android:textSize="@dimen/ZiTi_DaXiao" />

        </LinearLayout>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="#000000" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/HangGao"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:paddingStart="20dp"
                android:text="@string/XueYang"
                android:textColor="@color/black"
                android:textSize="@dimen/ZiTi_DaXiao"
                tools:ignore="RtlSymmetry" />

            <TextView
                android:id="@+id/tv_XueYang"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/XXX"
                android:textColor="@color/black"
                android:textSize="@dimen/ZiTi_DaXiao" />

        </LinearLayout>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="#000000" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/HangGao"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:paddingStart="20dp"
                android:text="@string/WeiZhi"
                android:textColor="@color/black"
                android:textSize="@dimen/ZiTi_DaXiao"
                tools:ignore="RtlSymmetry" />

            <TextView
                android:id="@+id/tv_WeiZhi"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/XXX"
                android:textColor="@color/black"
                android:textSize="@dimen/ZiTi_DaXiao" />

        </LinearLayout>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="#000000" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:paddingStart="20dp"
                android:text="@string/TiShi"
                android:textColor="@color/black"
                android:textSize="@dimen/ZiTi_DaXiao"
                tools:ignore="RtlSymmetry" />

            <TextView
                android:id="@+id/tv_TiShi"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/XXX"
                android:textColor="@color/black"
                android:textSize="@dimen/ZiTi_DaXiao" />

        </LinearLayout>

        <Button
            android:id="@+id/btn_ShuaXin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/GuSe"
            android:text="@string/ShuaXin"
            android:textColor="@color/white"
            android:textSize="@dimen/ZiTi_DaXiao" />

    </LinearLayout>

</FrameLayout>