<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/rl_DiBu_DaoHangLan"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true">

    </FrameLayout>

    <RelativeLayout
        android:id="@+id/rl_DiBu_DaoHangLan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:background="#fff">

        <RadioGroup
            android:id="@+id/rg_DiBu_DaoHangLan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:orientation="horizontal"
            android:padding="5dp">

            <RadioButton
                android:id="@+id/rb_ShiShi_ShuJu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:button="@null"
                android:checked="true"
                android:drawableTop="@drawable/selector_shi_shi_shu_ju"
                android:gravity="center"
                android:text="@string/ShiShi_ShuJu"
                android:textColor="@drawable/selector_xuan_ze_qi"
                android:textSize="@dimen/ZiTi_DaXiao" />

            <RadioButton
                android:id="@+id/rb_WeiGui_JiLu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:button="@null"
                android:drawableTop="@drawable/selector_wei_gui_ji_lu"
                android:gravity="center"
                android:text="@string/WeiGui_JiLu"
                android:textColor="@drawable/selector_xuan_ze_qi"
                android:textSize="@dimen/ZiTi_DaXiao" />

            <RadioButton
                android:id="@+id/rb_GeRen_ZhongXin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:button="@null"
                android:drawableTop="@drawable/selector_ge_ren_zhong_xin"
                android:gravity="center"
                android:text="@string/GeRen_ZhongXin"
                android:textColor="@drawable/selector_xuan_ze_qi"
                android:textSize="@dimen/ZiTi_DaXiao" />
        </RadioGroup>
    </RelativeLayout>

</RelativeLayout>